# NeuroPlasticity

./: .gitignore  AGENTS.md  AGENT_INTEGRATION_GUIDE.md  ARC7-REVIEW-ARCHITECTURE-2026-04-20.md  ARCHITECTURE.md  Cargo.toml  KICKOFF.md  LICENSE  README.md  RFC_DOCKERFILE_SANDBOX.md  RFC_HYBRID_WORKSPACE.md  fast_test.json  patch_manifest.sh  plasticity.json  test_evaluators.json
.beads/: metadata.json
.github/workflows/: release.yml
.neuroplasticity/: rules.json
.neuroplasticity/runs/80ec78d5-42ef-4613-88eb-05d5164c0b64/: epoch-1.json  epoch-2.json
docs/: ARC7_BUG_REPORT.md  ARC7_PERSONA_BUG_REPORT.md  ARCHITECTURE.md  KICKOFF.md
images/: build.sh  neuro-agent-testbed.Containerfile  neuro-rust-testbed.Containerfile
praxis_test/: plasticity.json
schemas/v1/: plasticity.schema.json
src/: container.rs  embedded_llm.rs  evaluator.rs  fingerprint.rs  llm_client.rs  main.rs  manifest.rs  optimizer.rs  reporter.rs  runner.rs
templates/claude-code/: plasticity.json
templates/copilot-cli/: plasticity.json
templates/opencode/: plasticity.json
