[package]
name = "NeuroPlasticity"
version = "1.0.1"
edition = "2024"

[features]
default = []
embedded-llm = ["dep:llama-cpp-2", "dep:futures-util"]

[dependencies]
anyhow = "1.0.102"
llama-cpp-2 = { version = "0.1.144", optional = true }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = { version = "1.52.1", features = ["fs", "full", "process", "signal", "time"] }
uuid = { version = "1.23.1", features = ["v4"] }
walkdir = "2.5.0"
futures-util = { version = "0.3", optional = true }
shellexpand = "3.1.2"
futures = "0.3.32"
